test/tests/errors/error-repeat-not-bool.sm
// true
// false
/**/
/**/

program {
    var x = 1;
    repeat {
        output 1;
    } until (x)
}